# DeepQAP

./: .gitattributes  .gitignore  README.md  download_qapsoln.sh  pyproject.toml  run_a2c_increasing.sh  run_a2c_mediumrandom.sh  run_a2c_mediumrandom_2.sh  run_a2c_mediumrandom_2_lr2.sh  run_a2c_mediumrandom_3.sh  run_a2c_mediumrandom_cyclic.sh  run_a2c_mediumrandom_stepped.sh  run_a2c_norms.py  run_a2c_smallrandom.sh  run_dqn_eps_mediumrandom.sh  run_dqn_increasing.sh  run_dqn_linked.sh  run_dqn_linked_eps.sh  run_dqn_mediumrandom.sh  run_dqn_mini.sh  run_dqn_norms.py  run_dqn_norms_kmn.py  run_dqn_norms_pairnorm.py  run_dqn_randomstart.py  run_dqn_randomstart.sh  run_dqn_smallrandom.sh  run_dqn_smallrandom_mse.sh  run_dqn_tai35a.sh  run_mcq_smallrandom.sh  run_reinforce_mediumrandom.sh  run_reinforce_norms.py  run_reinforce_pairnorm.py  run_reinforce_smallrandom.sh  run_reinforce_smallrandom_lowerlrs.sh  run_smallrandom.sh
evaluation/: ConvLayerTest.ipynb  ConvLayerTest_v2.ipynb  ConvLayer_initialization.ipynb  GNNTest.ipynb  GNNTest_v2.ipynb  Generalization_by_size.ipynb  Generalization_by_size_norms.ipynb  LinkNetTest.ipynb  MatplotlibTest.ipynb  MiniQAP.ipynb  MultiConvLayerTest.ipynb  OptimalDistribution.ipynb  QapLayerTest.ipynb  Reward Distribution.ipynb  Tai35a.ipynb  bur26a.ipynb  generalization.ipynb  gradientplots.py  plots.ipynb  qaplib_evaluation.ipynb  server.py  small_random_graphs_optimums.txt  solvers.ipynb  stochastic_analysis.ipynb  testgraph.qap  transformer_analysis.ipynb
src/: agent_configs.py  evaluate.py  nn.py  pyproject.toml  qap.py  reinforce.py  reinforce_nets.py  simplesolver.py  taskgenerators.py  test.py  testgraphs.py  train_agent.py  trainer.py  utils.py  visualisation.py
src/drlqap/: actor_critic.py  agent_configs.py  dqn.py  dqn_nets.py  evaltools.py  evaluate.py  experiment.py  gurobi.py  mcq.py  nn.py  nn_configs.py  nnutils.py  policies.py  qap.py  qapenv.py  qaplib.py  qaplib_visualizer.py  reinforce.py  reinforce_nets.py  simplesolver.py  taskgenerators.py  test.py  testgraphs.py  train_agent.py  trainer.py  try_agent.py  utils.py  visualisation.py
(+17 files in other folders)
