[tool.poetry]
name = "drlqap"
version = "0.1.0"
description = ""
authors = ["Tim Göttlicher <timg00@outlook.de>"]

[tool.poetry.dependencies]
python = "~3.9.0"
numpy = "^1.21.4"
networkx = "^2.6.3"
matplotlib = "^3.5.0"
torch = "~1.10.0"
torch-geometric = "2.0.3"
jupyter = "^1.0.0"
natsort = "^8.0.0"
bokeh = "^2.4.2"
torch-sparse = "^0.6.12"
torch-scatter = "^2.0.9"
ipympl = "^0.8.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Bottleneck = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
