[tool.poetry]
name = "drlqap"
version = "0.1.0"
description = ""
authors = ["Tim Göttlicher <timg00@outlook.de>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.4"
networkx = "^2.6.3"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
